--- a/config/database.yml
+++ b/config/database.yml
@@ -48,7 +48,8 @@ test:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
 production:
-  <<: *default
+    adapter: postgresql
+  encoding: unicode
   database: tienda_production
   username: tienda
   password: <%= ENV['TIENDA_DATABASE_PASSWORD'] %>
